...

    <!-- Global Strings -->
    <string name="global_appName">Util3D</string>
    <string name="global_fragmentName_createAccount">Create Account</string>
    <string name="global_fragmentName_createProject">Create Project</string>
    <string name="global_fragmentName_dashboard">Dashboard</string>
    <string name="global_fragmentName_login">Login</string>
    <string name="global_fragmentName_map">Map</string>
    <string name="global_fragmentName_openProject">Open Project</string>
    <string name="global_fragmentName_settings">Settings</string>

    <!-- LoginFragment Strings -->
    <string name="s_fragment_login_editText_hint_username">Email</string>
...

    <!-- DashboardFragment Strings -->
    <string name="s_fragment_dashboard_textView_filesPlaceholder">Files Fragment goes here.</string>
    <string name="s_fragment_dashboard_button_createProject">Create Project</string>
    <string name="s_fragment_dashboard_button_openProject">Open Project</string>
    <string name="s_fragment_dashboard_button_settings">Settings</string>
    <string name="s_fragment_dashboard_button_logout">Logout</string>
    <string name="s_fragment_dashboard_alertMessage_loggedOut">Logged out.</string>

    <!-- SettingsFragment Strings -->
    <string name="s_fragment_settings_title">Settings</string>
    <string name="s_fragment_settings_button_changePassword">Change Password</string>
    <string name="s_fragment_settings_button_changeEmail">Change Email</string>
...
